--- a/docs/style.css
+++ b/docs/style.css
@@ -91,7 +91,7 @@ a:visited {
 }
 
 [class^="icon-"] {
-  --size: 1.4rem;
+  --size: var(--icon-size, 1.4rem);
   background-color: #f0f4f8;
   display: inline-block;
   height: var(--size);
@@ -175,6 +175,8 @@ table > thead th > div {
 
   gap: 4px;
   padding: 12px;
+
+  --icon-size: 1.6rem;
 }
 
 tbody th {
@@ -205,4 +207,57 @@ th.sub {
 table + h1 {
   margin-top: 60px;
   padding-top: 2vh;
+}
+
+.stats {
+  display: flex;
+  align-items: center;
+  margin-bottom: 6px;
+  width: fit-content;
+}
+
+.stats span {
+  width: 6rem;
+}
+
+.stats > div {
+  height: 20px;
+  width: calc(40vw - 6rem);
+
+  display: flex;
+}
+
+.stats > div > div {
+  height: 100%;
+  padding-left: 4px;
+  text-transform: capitalize;
+  font-size: 15px;
+  line-height: 20px;
+  overflow: hidden;
+}
+
+.stats .stat-yes {
+  background: #0b994d;
+}
+
+.stats .stat-patch {
+  background: #7d36be;
+}
+
+.stats .stat-stub, .stats .stat-unknown {
+  background: #808488;
+}
+
+.stats .stat-no, .stats .stat-bug {
+  background: #e63a48;
+}
+
+.stats + table {
+  margin-top: 20px;
+}
+
+.stats.chrome + .stats.firefox {
+  border-top: 1px solid #808488;
+  margin-top: 8px;
+  padding-top: 8px;
 }
